--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             --btn-color: #3498db;
             --log-bg: #ffffff;
             /* 追加：判定用カラー */
-            --critical-color: #f1c40f;
+            --critical-color: #00ff00;
             --fumble-color: #e74c3c;
         }
 
