--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 </div>
 
 <div id="main">
-    <button class="btn btn-main-2d6" onclick="roll2d6(0)">2d6 (平目)</button>
+    <button class="btn btn-main-2d6" onclick="roll2d6(0)">2d6</button>
 
     <hr>
 
